# 
# Stop MDM community Header =======================================


0. Contents
	
	These are the release notes of the openATFX library.
	

1. Changes

	0.3.1 (Christian Rechner)
	
		- Implemented returning the unit at methods 'getValue' and 'getValueSeq'
		- Implemented reading external component files for data types
		  * DS_LONG
		  * DS_FLOAT
		  * DS_DOUBLE
		  and type specs
		  * dt_long
		  * dt_long_beo
		  * ieeefloat4
		  * ieeefloat4_beo
		  * ieeefloat8
		  * ieeefloat8_beo
		
	0.3.0 (Christian Rechner)
	
		- Completely changed the behaviour of creating application relations
		  the fulfil the ODS specification in automatically creating inverse
		  relations.
		  CAUTION: THIS MAY BREAK EXISTING CLIENT APPLICATIONS
		- Added skipping the implicit creation the 'AoExternalComponent' applElem
		  if no 'AoLocalColumn' application element exists.
		- Fixed incrementing the instance ids.

	0.2.2 (Christian Rechner)
	
		- Added ability to DIAdem DAT to ATFX converter to convert data sets
		  having different no of rows in the header file as in the binary data.
		- Added ability to change the datatype of an application attribute
		  derived from a base attribute. This necessary for several external
		  component attributes.
		- Removed wrong mandatory flag at attributes 'sequence_representation'
		  and 'generation_parameters' of 'AoLocalColumn'.

	0.2.1 (Christian Rechner)
	
		- Completed implementation of the DIAdem DAT to ATFX converter.
		- Added checking of having the right base relations in case of
		  multiple children.

	0.2.0 (Christian Rechner)
	
		- Enabled handling of LocalColumns having no values set.
		- Suppress writing of NULL attribute values.
		- Added DIAdem DAT to ATFX converter.
		- Implemented method "ApplElemAccess"->"deleteInstances".
		- Fixed method "isObligatory" of the interface ApplicationAttribute.
		- Fixed misspelling of ApplicationAttribute tag from "autogenerated" to "autogenerate".

	0.1.9 (Christian Rechner)
	